# errol

./: .env  .env.example  .gitignore  Cargo.toml  Makefile  README.md  example-github-push-hook.json  example-request.json  example-requests.json  example-requests.txt  main.go  make-bad-requests.sh  make-example-github-request.sh  make-example-request.sh  run-issues.sh
cmd/db-debug/: main.go
cmd/server/: main.go
errol_frontend/: .coveragerc  .editorconfig  .env.production.example  .gitignore  CONTRIBUTORS.txt  LICENSE  README.rst  manage.py  package.json  run.sh
errol_frontend/config/: urls.py  wsgi.py
errol_frontend/config/settings/: base.py  local.py  production.py  staging.py  test.py
errol_frontend/docs/: Makefile  conf.py  index.rst  make.bat
errol_frontend/docs/pycharm/: configuration.rst
errol_frontend/errol_frontend/: conftest.py
errol_frontend/errol_frontend/errol/: apps.py  models.py  routers.py  urls.py  views.py
errol_frontend/errol_frontend/errol/migrations/: 0001_initial.py
errol_frontend/errol_frontend/static/css/: project.css  project.min.css
errol_frontend/errol_frontend/static/js/: vendors.js  vendors.min.js
errol_frontend/errol_frontend/taskapp/: celery.py
errol_frontend/errol_frontend/templates/: base.html
errol_frontend/errol_frontend/templates/errol/: rules_detail.html  rules_form.html  rules_list.html
errol_frontend/errol_frontend/users/: admin.py  apps.py  urls.py
errol_frontend/errol_frontend/users/tests/: test_forms.py  test_views.py
errol_frontend/requirements/: base.txt  local.txt  production.txt
go/: Gopkg.toml  go.mod  go.sum
go/cmd/db-debug/: main.go
go/cmd/debug/: main.go
go/cmd/errol-run-as-post-receive-hook/: main.go
go/cmd/git-debug/: main.go
go/cmd/server/: main.go
go/pkg/hook/: hook.go
go/pkg/server/: github.go  gitlab.go  server.go  server.go.backup
migrations/2018-10-25-190658_create_github_issues/: down.sql  up.sql
migrations/2018-10-31-211743_create_pushes/: down.sql  up.sql
misc/: mention-bot.jsonc
misc/configs/: Gitlab-CODEOWNERS  example-rules.yaml
misc/payloads/: github-issues-event.json
pkg/server/: github.go  gitlab.go  server.go
rust/: Cargo.toml
rust/src/: main.rs
rust/src/github/: mod.rs  models.rs
src/: kitchensink.rs  lib.rs  main.rs  models.rs  schema.rs
src/github/: mod.rs  models.rs
src/gitlab/: mod.rs  models.rs
templates/: base.html
(+3 files in other folders)
