[package]
name = "errol"
version = "0.1.0"
authors = [
  "William Stewart <zoidbergwill@gmail.com>",
]

[dependencies]
actix = ""
actix-web = ""
chrono = ""
diesel = { version = "", features = ["postgres"] }
dotenv = ""
serde = ""
serde_derive = ""
serde_json = ""
serde_yaml = ""
failure = ""
futures = ""
http = ""
quickcheck = ""
hubcaps = ""
log = ""
env_logger = ""
tokio = ""
tera = ""
# cookie = ""
# github-rs = ""
# gitlab = ""
# lettre = ""
# lettre_email = ""
# https://github.com/HeroicKatora/oxide-auth/issues/15
# and https://github.com/briansmith/ring/pull/619
# oxide-auth = { git = 'https://github.com/HeroicKatora/oxide-auth', branch = 'dev-v0.4.0' }
# racer = ""
# reqwest = ""
# syntect = ""
