[package]
name = "errol"
version = "0.1.0"
authors = [
  "William Stewart <zoidbergwill@gmail.com>",
]

[dependencies]
actix = ""
actix-web = ""
chrono = ""
diesel = { version = "", features = ["postgres"] }
dotenv = ""
env_logger = ""
failure = ""
futures = ""
http = ""
hubcaps = ""
log = ""
oauth2 = ""
quickcheck = ""
serde = ""
serde_derive = ""
serde_json = ""
serde_yaml = ""
tera = ""
tokio = ""
# cookie = ""
# github-rs = ""
# gitlab = ""
# lettre = ""
# lettre_email = ""
# https://github.com/HeroicKatora/oxide-auth/issues/15
# and https://github.com/briansmith/ring/pull/619
oxide-auth = { git = 'https://github.com/zoidbergwill/oxide-auth', branch = 'dev-v0.4.0' }
# racer = ""
# reqwest = ""
# syntect = ""
