[package]
name = "errol"
version = "0.1.0"
authors = [
  "William Stewart <zoidbergwill@gmail.com>",
]

[dependencies]
actix = ""
actix-web = ""
base64 = ""
chrono = ""
diesel = { version = "", features = ["chrono", "postgres"] }
dotenv = ""
env_logger = ""
failure = ""
futures = ""
http = ""
hubcaps = ""
log = ""
oauth2 = "2.0.0-alpha.2"
quickcheck = ""
rand = ""
serde = ""
serde_derive = ""
serde_json = ""
serde_yaml = ""
tera = ""
tokio = ""
url = ""
sentry = "0.12.0"
# cookie = ""
# github-rs = ""
# gitlab = ""
# lettre = ""
# lettre_email = ""
# https://github.com/HeroicKatora/oxide-auth/issues/15
# and https://github.com/briansmith/ring/pull/619
# oxide-auth = { git = 'https://github.com/HeroicKatora/oxide-auth', features = ["actix-frontend"], branch = 'dev-v0.4.0' }
# racer = ""
# reqwest = ""
# syntect = ""
